# ChangeLog for app-emacs/flim
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/flim/ChangeLog,v 1.20 2007/04/23 09:49:58 opfer Exp $

  23 Apr 2007; Christian Faulhammer <opfer@gentoo.org> flim-1.14.8.ebuild:
  remove virtual/emacs from DEPEND, it is already pulled in by elisp.eclass;
  exchanged hard coded part of SITEFILE with PN variable

  30 Mar 2007; Fabian Groffen <grobian@gentoo.org> flim-1.14.6.ebuild,
  flim-1.14.7.ebuild, flim-1.14.8.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  13 Mar 2007; Christian Faulhammer <opfer@gentoo.org> flim-1.14.6.ebuild,
  flim-1.14.7.ebuild, flim-1.14.8.ebuild:
  adjusted DESCRIPTION in all three; added a lot of quotes and refinements
  (make -> emake) to the latest testing

  07 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  files/60flim-gentoo.el:
  add load path correctly, fixes bug 169588, reported by Ulrich Mueller
  <ulm@kph.uni-mainz.de>

  23 Feb 2007; Christian Faulhammer <opfer@gentoo.org> -flim-1.14.5.ebuild:
  clean up

*flim-1.14.8 (05 Mar 2006)

  05 Mar 2006; Matthew Kennedy <mkennedy@gentoo.org> +flim-1.14.8.ebuild:
  New upstream version; Resolves Bug #124236.

  01 Jul 2005; Matthew Kennedy <mkennedy@gentoo.org> flim-1.14.7.ebuild:
  Keywording ~amd64.

*flim-1.14.7 (05 Oct 2004)

  05 Oct 2004; Mamoru KOMACHI <usata@gentoo.org> +flim-1.14.7.ebuild:
  Version bumped.

  19 Jul 2004; Mamoru KOMACHI <usata@gentoo.org> flim-1.14.6.ebuild:
  Added to macos

  11 Mar 2004; Jason Wever <weeve@gentoo.org> flim-1.14.6.ebuild:
  Stable on sparc.

  31 Jan 2004; Mamoru KOMACHI <usata@gentoo.org> flim-1.14.6.ebuild:
  Marked stable on x86 and alpha

*flim-1.14.6 (22 Dec 2003)

  22 Dec 2003; Mamoru KOMACHI <usata@gentoo.org> flim-1.14.6.ebuild,
  flim-1.14.6_pre20031214.ebuild:
  Version bumped

*flim-1.14.6_pre20031214 (20 Dec 2003)

  20 Dec 2003; Mamoru KOMACHI <usata@gentoo.org>
  flim-1.14.6_pre20031214.ebuild:
  Added snapshot
