@@ -1,12 +1,10 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/flim/flim-1.14.8.ebuild,v 1.4 2007/04/23 09:49:58 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/flim/flim-1.14.8.ebuild,v 1.6 2007/05/15 14:46:04 ulm Exp $
 
 EAPI="prefix"
 
 inherit elisp
-
-IUSE=""
 
 DESCRIPTION="A library to provide basic features about message representation or encoding"
 HOMEPAGE="http://cvs.m17n.org/elisp/FLIM/"
@@ -15,10 +13,10 @@ SRC_URI="ftp://ftp.m17n.org/pub/mule/flim/flim-1.14/${P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~x86 ~ppc-macos ~amd64"
-DEPEND="!virtual/flim
-	>=app-emacs/apel-10.3"
+IUSE=""
 
-PROVIDE="virtual/flim"
+DEPEND="!app-emacs/limit
+	>=app-emacs/apel-10.3"
 
 SITEFILE=60${PN}-gentoo.el
 
